gac_sb/objects/AppATactionRecours__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Recours__c</fullName>
        <label>Recours</label>
        <referenceTo>AppATrecours__c</referenceTo>
        <relationshipLabel>Actions de recours</relationshipLabel>
        <relationshipName>ActionsRecours</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RenvoyPar__c</fullName>
        <inlineHelpText>Uniquement pour le type Renvoi</inlineHelpText>
        <label>Renvoyé par :</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>TypeAction__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>GAC</fullName>
                </value>
                <value>
                    <fullName>Partie adverse</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TypeAction__c</fullName>
        <label>Type d&apos;action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Renvoi</fullName>
                </value>
                <value>
                    <fullName>Réception/Envoi conclusions</fullName>
                </value>
                <value>
                    <fullName>Réception/Envoi conclusions en répliques</fullName>
                </value>
                <value>
                    <fullName>Autres</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Action de recours</label>
    <nameField>
        <displayFormat>ACT - {0000}</displayFormat>
        <label>Nom de Action de recours</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Actions de recours</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>